#2 align - styles fix

--- a/mguide/src/main/ts/mguide/src/app/auth/auth.component.scss
+++ b/mguide/src/main/ts/mguide/src/app/auth/auth.component.scss
@@ -7,11 +7,6 @@
     padding-bottom: 20px;
     border-radius: 56px;
 }
-h1{
-    font-size: 35px;
-    text-align: center;
-    margin-bottom: 20px;
-}
 
 .fields{
     width:910px;
