--- a/mguide/src/main/ts/mguide/src/app/filters/filters.component.scss
+++ b/mguide/src/main/ts/mguide/src/app/filters/filters.component.scss
@@ -1,11 +1,7 @@
 .background-style{
     width:1050px; margin:0 auto; background-color: #bcebdb;     height: 100%;    padding-top: 20px; padding-bottom: 20px;
 }
-h1{
-    font-size: 35px;
-    text-align: center;
-    margin-bottom: 20px;
-}
+
 
 .fields{
     width:910px;
